# Film-EXIF-Editor

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
docs/: 01_기획_기능_구조_디자인시스템.md  02_PRD.md  03_아키텍처설계.md  04_개발착수프롬프트.md
scripts/: setup-exiftool.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: .gitkeep
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/domain/: mod.rs  usercomment.rs
src-tauri/src/exiftool/: mod.rs
src/components/: Calendar.tsx  SaveDialog.tsx
src/components/Layout/: EditFormPanel.tsx  PreviewPanel.tsx  StatusBar.tsx  ThumbnailPanel.tsx
src/ipc/: .gitkeep  exif.ts
src/lib/: csv.ts  dateUtils.ts  filmStocks.ts
src/store/: .gitkeep
